collecting script by using url crawling

--- a/data/Crawling.ipynb
+++ b/data/Crawling.ipynb
@@ -22,16 +22,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "843641f9",
+   "execution_count": 16,
+   "id": "03c7e8c9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 크롤러 시동 거는 중...\n",
-      "🌐 접속 중: https://rollcall.com/factbase/trump/search/\n"
+      "/home/hyuksu/teamproject2/.venv/bin/python\n",
+      "4.40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, selenium\n",
+    "print(sys.executable)\n",
+    "print(selenium.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c096bb61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TITLE: Example Domain\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "opt = webdriver.ChromeOptions()\n",
+    "opt.add_argument(\"--headless=new\")\n",
+    "opt.add_argument(\"--no-sandbox\")\n",
+    "opt.add_argument(\"--disable-dev-shm-usage\")\n",
+    "opt.add_argument(\"--disable-gpu\")\n",
+    "opt.binary_location = \"/usr/bin/google-chrome\"\n",
+    "\n",
+    "driver = webdriver.Chrome(options=opt)  # ✅ Selenium Manager가 드라이버 자동 처리\n",
+    "driver.get(\"https://example.com\")\n",
+    "print(\"TITLE:\", driver.title)\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "422fc537",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TITLE: Roll Call Factba.se - Donald J. Trump Transcript Search\n",
+      "LEN HTML: 732977\n",
+      "HAS View Transcript?: True\n",
+      "HAS Sign in?: False\n",
+      "HAS Access denied/Attention?: False\n",
+      "saved debug_rollcall.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "opt = webdriver.ChromeOptions()\n",
+    "opt.add_argument(\"--headless=new\")\n",
+    "opt.add_argument(\"--no-sandbox\")\n",
+    "opt.add_argument(\"--disable-dev-shm-usage\")\n",
+    "opt.add_argument(\"--disable-gpu\")\n",
+    "opt.binary_location = \"/usr/bin/google-chrome\"\n",
+    "\n",
+    "driver = webdriver.Chrome(options=opt)\n",
+    "driver.get(\"https://rollcall.com/factbase/trump/search/\")\n",
+    "html = driver.page_source\n",
+    "\n",
+    "print(\"TITLE:\", driver.title)\n",
+    "print(\"LEN HTML:\", len(html))\n",
+    "print(\"HAS View Transcript?:\", \"View Transcript\" in html)\n",
+    "print(\"HAS Sign in?:\", (\"Sign in\" in html) or (\"sign in\" in html))\n",
+    "print(\"HAS Access denied/Attention?:\", (\"Access denied\" in html) or (\"Attention Required\" in html))\n",
+    "\n",
+    "with open(\"debug_rollcall.html\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(html)\n",
+    "\n",
+    "driver.quit()\n",
+    "print(\"saved debug_rollcall.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6ef930cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK-1 TITLE: Example Domain\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "opt = webdriver.ChromeOptions()\n",
+    "opt.add_argument(\"--headless=new\")\n",
+    "opt.add_argument(\"--no-sandbox\")\n",
+    "opt.add_argument(\"--disable-dev-shm-usage\")\n",
+    "opt.binary_location = \"/usr/bin/google-chrome\"\n",
+    "\n",
+    "d = webdriver.Chrome(options=opt)\n",
+    "d.get(\"https://example.com\")\n",
+    "print(\"OK-1 TITLE:\", d.title)\n",
+    "d.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cd78b5db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "HTTP/2 200 \n",
+      "date: Thu, 22 Jan 2026 07:12:17 GMT\n",
+      "content-type: text/html; charset=UTF-8\n",
+      "server: nginx/1.18.0 (Ubuntu)\n",
+      "vary: Accept-Encoding\n",
+      "link: <https://rollcall.com/wp-json/>; rel=\"https://api.w.org/\"\n",
+      "link: <https://rollcall.com/wp-json/wp/v2/pages/749104>; rel=\"alternate\"; title=\"JSON\"; type=\"application/json\"\n",
+      "link: <https://rollcall.com/?p=749104>; rel=shortlink\n",
+      "x-frame-options: SAMEORIGIN\n",
+      "x-xss-protection: 1; mode=block\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -I https://rollcall.com/factbase/trump/search/ | head\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d1274914",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 [전체 수집 모드] 브라우저 실행 중...\n",
+      "🌐 사이트 접속: https://rollcall.com/factbase/trump/search/\n",
+      "⬇️ 전체 데이터를 위해 스크롤을 내립니다...\n",
+      "   ... 스크롤 0회 완료 (현재 높이: 13444)\n",
+      "   ... 스크롤 10회 완료 (현재 높이: 78267)\n",
+      "   ... 스크롤 20회 완료 (현재 높이: 142015)\n",
+      "   ... 스크롤 30회 완료 (현재 높이: 205803)\n",
+      "   ... 스크롤 40회 완료 (현재 높이: 268149)\n",
+      "   ... 스크롤 50회 완료 (현재 높이: 330931)\n",
+      "   ... 스크롤 60회 완료 (현재 높이: 394994)\n",
+      "   ... 스크롤 70회 완료 (현재 높이: 459369)\n",
+      "   ... 스크롤 80회 완료 (현재 높이: 523243)\n",
+      "   ... 스크롤 90회 완료 (현재 높이: 585647)\n",
+      "   ... 스크롤 100회 완료 (현재 높이: 646875)\n",
+      "   ... 스크롤 110회 완료 (현재 높이: 706297)\n",
+      "   ... 스크롤 120회 완료 (현재 높이: 766244)\n",
+      "   ... 스크롤 130회 완료 (현재 높이: 829278)\n",
+      "🎉 더 이상 로딩될 데이터가 없습니다! (바닥 도달)\n",
+      "\n",
+      "🔍 전체 HTML 분석 및 링크 추출 중...\n",
+      "✅ 최종 수집 완료: 총 5425개\n",
+      "💾 'trump_links_full.csv' 파일로 저장 완료! (현재 폴더 확인)\n",
+      "                                                 url\n",
+      "0  https://rollcall.com/factbase/trump/transcript...\n",
+      "1  https://rollcall.com/factbase/trump/transcript...\n",
+      "2  https://rollcall.com/factbase/trump/transcript...\n",
+      "3  https://rollcall.com/factbase/trump/transcript...\n",
+      "4  https://rollcall.com/factbase/trump/transcript...\n"
      ]
     }
    ],
@@ -40,89 +222,159 @@
     "from selenium.webdriver.chrome.service import Service\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
     "import time\n",
     "\n",
-    "def step1_collect_links():\n",
-    "    # --- [1. 리눅스(WSL)용 크롬 설정] ---\n",
-    "    options = webdriver.ChromeOptions()\n",
-    "    options.add_argument(\"--headless\")  # 화면 없이 실행 (필수)\n",
-    "    options.add_argument(\"--no-sandbox\")\n",
-    "    options.add_argument(\"--disable-dev-shm-usage\")\n",
-    "    options.add_argument(\"--window-size=1920,1080\")\n",
+    "def scrape_all_links():\n",
+    "    url = \"https://rollcall.com/factbase/trump/search/\"\n",
+    "\n",
+    "    # --- [1. 최적화 옵션 설정] ---\n",
+    "    opt = webdriver.ChromeOptions()\n",
+    "    opt.add_argument(\"--headless=new\") \n",
+    "    opt.add_argument(\"--no-sandbox\")\n",
+    "    opt.add_argument(\"--disable-dev-shm-usage\")\n",
+    "    opt.add_argument(\"--disable-gpu\")\n",
+    "    opt.add_argument(\"--window-size=1920,1080\")\n",
+    "    \n",
+    "    # 이미지 로딩 차단 (속도 UP, 메모리 절약)\n",
+    "    opt.add_experimental_option(\"prefs\", {\"profile.managed_default_content_settings.images\": 2})\n",
+    "    opt.add_argument(\"--disable-extensions\")\n",
     "    \n",
     "    # 봇 탐지 회피용 헤더\n",
-    "    options.add_argument(\"user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.0.0 Safari/537.36\")\n",
-    "\n",
-    "    print(\"🚀 크롤러 시동 거는 중...\")\n",
-    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "    opt.add_argument(\"user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36\")\n",
     "    \n",
-    "    collected_links = [] # 수집한 링크를 저장할 리스트\n",
+    "    # 페이지 로딩 전략: eager (뼈대만 로딩되면 진행)\n",
+    "    opt.page_load_strategy = 'eager'\n",
+    "\n",
+    "    print(\"🚀 [전체 수집 모드] 브라우저 실행 중...\")\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=opt)\n",
+    "\n",
+    "    all_links = []\n",
     "\n",
     "    try:\n",
-    "        # --- [2. 검색 페이지 접속] ---\n",
-    "        url = \"https://rollcall.com/factbase/trump/search/\"\n",
-    "        print(f\"🌐 접속 중: {url}\")\n",
+    "        # 접속\n",
+    "        print(f\"🌐 사이트 접속: {url}\")\n",
     "        driver.get(url)\n",
-    "        time.sleep(5) # 페이지 로딩 대기\n",
+    "        time.sleep(5) # 초기 로딩 대기\n",
     "\n",
-    "        # --- [3. 스크롤 다운 (데이터 더 불러오기)] ---\n",
-    "        # 스크롤을 많이 내릴수록 더 과거의 링크까지 가져옵니다.\n",
-    "        # 테스트를 위해 5번만 내립니다. (원하면 숫자를 늘리세요)\n",
-    "        scroll_count = 5\n",
-    "        for i in range(scroll_count):\n",
+    "        # --- [2. 무한 스크롤 로직] ---\n",
+    "        last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "        scroll_count = 0\n",
+    "        \n",
+    "        # 안전장치: 최대 스크롤 횟수 (필요하면 1000으로 늘리세요)\n",
+    "        # 보통 1번 스크롤에 10~20개씩 로딩됩니다. 300번이면 약 3000~6000개.\n",
+    "        max_scrolls = 300 \n",
+    "        \n",
+    "        print(\"⬇️ 전체 데이터를 위해 스크롤을 내립니다...\")\n",
+    "\n",
+    "        while scroll_count < max_scrolls:\n",
+    "            # 바닥까지 스크롤\n",
     "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "            print(f\"⬇️ 스크롤 다운 ({i+1}/{scroll_count})...\")\n",
-    "            time.sleep(3) # 로딩 기다림\n",
+    "            \n",
+    "            # 로딩 대기 (인터넷 속도에 따라 조절, 2~3초 권장)\n",
+    "            time.sleep(2.5)\n",
+    "            \n",
+    "            # 높이 변화 체크\n",
+    "            new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "            \n",
+    "            if scroll_count % 10 == 0:\n",
+    "                print(f\"   ... 스크롤 {scroll_count}회 완료 (현재 높이: {new_height})\")\n",
     "\n",
-    "        # --- [4. HTML 분석 및 링크 추출] ---\n",
-    "        print(\"🔍 링크 찾는 중...\")\n",
-    "        soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "            if new_height == last_height:\n",
+    "                # 높이가 안 변하면 데이터가 끝났다는 뜻\n",
+    "                # 혹시 모르니 3초 더 기다리고 한 번 더 체크 (더블 체크)\n",
+    "                time.sleep(3)\n",
+    "                new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "                if new_height == last_height:\n",
+    "                    print(\"🎉 더 이상 로딩될 데이터가 없습니다! (바닥 도달)\")\n",
+    "                    break\n",
+    "            \n",
+    "            last_height = new_height\n",
+    "            scroll_count += 1\n",
+    "\n",
+    "        # --- [3. 전체 데이터 추출 (BeautifulSoup)] ---\n",
+    "        print(\"\\n🔍 전체 HTML 분석 및 링크 추출 중...\")\n",
+    "        soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
     "        \n",
-    "        # [핵심] 아까 발견한 'View Transcript' 버튼만 찾기\n",
     "        buttons = soup.select('a[title=\"View Transcript\"]')\n",
-    "\n",
-    "        for btn in buttons:\n",
-    "            href = btn['href']\n",
-    "            \n",
-    "            # 주소가 상대주소(/factbase/...)인 경우 도메인 붙여주기\n",
-    "            if \"rollcall.com\" not in href:\n",
-    "                full_link = \"https://rollcall.com\" + href\n",
-    "            else:\n",
-    "                full_link = href\n",
-    "            \n",
-    "            # 중복 아니면 리스트에 추가\n",
-    "            if full_link not in collected_links:\n",
-    "                collected_links.append(full_link)\n",
-    "\n",
-    "        print(\"-\" * 50)\n",
-    "        print(f\"✅ 수집 성공! 총 {len(collected_links)}개의 링크를 찾았습니다.\")\n",
-    "        print(\"-\" * 50)\n",
     "        \n",
-    "        # 찾은 링크 5개만 예시로 출력\n",
-    "        for i, link in enumerate(collected_links[:5]):\n",
-    "            print(f\"{i+1}. {link}\")\n",
+    "        for btn in buttons:\n",
+    "            href = btn.get('href')\n",
+    "            if href:\n",
+    "                if \"rollcall.com\" not in href:\n",
+    "                    href = \"https://rollcall.com\" + href\n",
+    "                \n",
+    "                # 중복 없이 저장\n",
+    "                if href not in all_links:\n",
+    "                    all_links.append(href)\n",
+    "\n",
+    "        print(f\"✅ 최종 수집 완료: 총 {len(all_links)}개\")\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"❌ 에러 발생: {e}\")\n",
-    "\n",
+    "    \n",
     "    finally:\n",
     "        driver.quit()\n",
-    "        print(\"👋 브라우저 종료\")\n",
-    "        \n",
-    "    return collected_links\n",
     "\n",
-    "# --- 실행 ---\n",
-    "link_list = step1_collect_links()"
+    "    # --- [4. CSV 저장] ---\n",
+    "    if all_links:\n",
+    "        df = pd.DataFrame(all_links, columns=['url'])\n",
+    "        filename = \"trump_links_full.csv\"\n",
+    "        df.to_csv(filename, index=False, encoding=\"utf-8-sig\")\n",
+    "        print(f\"💾 '{filename}' 파일로 저장 완료! (현재 폴더 확인)\")\n",
+    "        return df\n",
+    "    else:\n",
+    "        print(\"⚠️ 저장할 데이터가 없습니다.\")\n",
+    "        return None\n",
+    "\n",
+    "# 실행\n",
+    "df_full = scrape_all_links()\n",
+    "if df_full is not None:\n",
+    "    print(df_full.head()) # 상위 5개 미리보기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "194c87a8",
+   "execution_count": 28,
+   "id": "9a717385",
    "metadata": {},
    "outputs": [],
    "source": [
-    "link_list"
+    "a=pd.DataFrame(df_full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ebf40bf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       https://rollcall.com/factbase/trump/transcript...\n",
+       "1       https://rollcall.com/factbase/trump/transcript...\n",
+       "2       https://rollcall.com/factbase/trump/transcript...\n",
+       "3       https://rollcall.com/factbase/trump/transcript...\n",
+       "4       https://rollcall.com/factbase/trump/transcript...\n",
+       "                              ...                        \n",
+       "5420    https://rollcall.com/factbase/trump/transcript...\n",
+       "5421    https://rollcall.com/factbase/trump/transcript...\n",
+       "5422    https://rollcall.com/factbase/trump/transcript...\n",
+       "5423    https://rollcall.com/factbase/trump/transcript...\n",
+       "5424    https://rollcall.com/factbase/trump/transcript...\n",
+       "Name: url, Length: 5425, dtype: str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df=pd.read_csv('/home/hyuksu/teamproject2/data/all_url.csv')\n",
+    "df['url']\n"
    ]
   }
  ],
